--- a/sprite-cutter.html
+++ b/sprite-cutter.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>一键雪碧切 - PicEdit</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js"></script>
-    <script src="config.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <script src="js/tailwindcss.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/FileSaver.min.js"></script>
+    <script src="js/gif.js"></script>
+    <script src="js/config.js"></script>
     <style>
         .grid-preview {
             position: absolute;
@@ -53,7 +53,7 @@
 
         <main class="flex-1 overflow-hidden flex flex-col h-full max-w-full bg-[#0f172a] pb-5">
             <header class="header mt-12 px-8 mb-4 flex-shrink-0">
-                <h1 class="text-2xl mb-2">一键雪碧图切割</h1>
+                <h1 class="text-2xl mb-3">一键雪碧图切割</h1>
                 <p class="text-sm">将 Sprite Sheet 切割为序列帧，支持导出 GIF 动图。</p>
             </header>
 
@@ -419,7 +419,7 @@
                         quality: 10,
                         width: this.frameWidth,
                         height: this.frameHeight,
-                        workerScript: 'gif.worker.js'
+                        workerScript: 'js/gif.worker.js'
                     });
 
                     // Add frames
